Fix card border not being visible in embedded board

--- a/src/components/css/Board.css
+++ b/src/components/css/Board.css
@@ -1,10 +1,6 @@
 :local(.Board) {
-  /* width: 100%;
-  height: 100%; */
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  width: 100%;
+  height: 100%;
   position: absolute;
   z-index: 0;
   background-color: #fff;
@@ -19,6 +15,17 @@
   position: absolute;
   background-color: #000;
   opacity: 0.15;
+}
+
+:local(.BoardEmbed) {
+  top: 1;
+  bottom: 1;
+  left: 1;
+  right: 1;
+  position: relative;
+  z-index: 0;
+  background-color: #fff;
+  overflow: hidden;
 }
 
 :local(.BoardPreview) {
